[package]
name = "tinywake"
description = "A minimal, no_std-compatible waker implementation for Cortex-M async executors."
version = "0.2.1"
edition = "2024"
authors = ["Wilfried Chauveau <wilfried.chauveau@ithinuel.me>"]
license = "MIT"
repository = "https://github.com/ithinuel/TinyWake"
readme = "README.md"
keywords = ["async", "bare-metal", "cortex-m", "waker", "executor"]
categories = ["asynchronous", "no-std", "embedded"]

[dependencies]
cortex-m = "0.7.7"
heapless = "0.8.0"
portable-atomic = "1.11.0"

[dev-dependencies]
futures = "0.3.31"

[features]
cortex-m = []
